# fernet-versioned-secrets

./: README.md  pyproject.toml
examples/: demo.py
src/fernet_versioned/: __init__.py
tests/: test_roundtrip.py
