[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fernet-versioned-secrets"
version = "0.1.0"
description = "Version-prefixed Fernet encryption for secrets, with backward-compatible plaintext passthrough for gradual migrations."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "daichi-0818" }
]
keywords = ["fernet", "encryption", "secrets", "cryptography", "key-rotation"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/daichi-0818/fernet-versioned-secrets"

[tool.setuptools.packages.find]
where = ["src"]
